--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
+    <!-- Generic Erros -->
+    <string name="email_empty">Verifique o e-mail digitado</string>
+    <string name="name_empty">Verifique o nome digitado</string>
+    <string name="celular_empty">Verifique o celular digitado</string>
+    <string name="senhas_iguais">suas senhas não coinscidem</string>
+
+    <!-- Mensagens usada por padrao no bottomSheet -->
     <string name="title_bottom_sheet">Atenção</string>
     <string name="message_bottom_sheet">Mensagem generica aqui ocorreu um erro faça isso para solucionar</string>
     <string name="button_bottom_sheet">Entendido</string>
