created FirebaseHelper get error and translated for portuguese

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,23 @@
     <string name="digiteSuaSenha">Digite sua senha de acesso ao sistema</string>
     <string name="digiteSeuEmail">Digite seu e-mail de acesso ao aplicativo</string>
 
+    <!-- registerFragment Erros -->
+    <string name="preenchaEmail">Preencha seu e-mail de acesso ao aplicativo</string>
+    <string name="verifiqueEmail">Prontinho! enviamos um e-mail com o link para redefinição da senha, verifique sua caixa de SPAM</string>
+
+
     <!-- Mensagens usada por padrao no bottomSheet -->
     <string name="title_bottom_sheet">Atenção</string>
     <string name="message_bottom_sheet">Mensagem generica aqui ocorreu um erro faça isso para solucionar</string>
     <string name="button_bottom_sheet">Entendido</string>
+
+    <!--    Erros Firebase Authentication-->
+    <string name="login_or_password_error">Seu e-mail ou senha inseridos estao incorretos</string>
+    <string name="account_not_registered_register_fragment">Não encontramos nenhum cadastro com este e-mail :(.</string>
+    <string name="invalid_email_register_fragment">Verifique o e-mail inserido</string>
+    <string name="invalid_password_register_fragment">Email ou senha incorretos, verifique seus dados e tente novamente</string>
+    <string name="email_in_use_register_fragment">Possuimos um cadastro com este e-mail, opte por redefinir seua senha de acesso</string>
+    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
+    <string name="ocorreu_um_erro">Ocorreu um erro</string>
 
 </resources>
