feat: Created new feature recharge

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="celular_empty">Verifique o celular digitado</string>
     <string name="senhas_iguais">suas senhas não coinscidem</string>
     <string name="celular_incorreto">O celular digitado está invalido</string>
+    <string name="valor_da_recarga">Insira o valor que deseja recarregar no celular</string>
 
     <!-- loginFragment Erros -->
     <string name="digiteSuaSenha">Digite sua senha de acesso ao sistema</string>
